--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-}
+
+    buildFeatures {
+        viewBinding true
+    }}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
